Enable the Input of Separate Parameters for HRD and GO